# CREOLE

./: mkdocs.yml  mkdocs.yml~  pyproject.toml  pyproject.toml~
creole/: __init__.py
creole/creole_prot/: __init__.py  helpers.py  orf_prediction.py
docs/: index.md  index.md~
docs/api/: ORFsPrediction.md
docs/stylesheets/: extra.css  extra.css~
tests/: __init__.py~  test_orf_prediction.py
