[tool.poetry]
name = "creole"
version = "0.1.0"
description = ""
authors = ["amaque <joeamaky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
blue = "^0.9.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.9"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--doctest-modules",
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=creole -vv"
post_test = "coverage html"
